--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1>My name is John (aka ArrantSquid)</h1>
-<p>This is my page&hellip;</p>
+<h1>My name is John P. Neumann</h1>
+<p>I work at InContext Solutions as a Senior Technical Artist.</p>
+<p>I'm a former Marine and Disabled Veteran.</p>
