--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Home
+---
+
 <h1>My name is John P. Neumann</h1>
-<p>I work at InContext Solutions as a Senior Technical Artist.</p>
+<p>I work at InContext Solutions as the Lead Technical Artist.</p>
 <p>I'm a former Marine and Disabled Veteran.</p>
