Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,8 +1,52 @@
----
-layout: default
-title: Home
----
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>My GitHub website by johnpneumann</title>
 
-<h1>My name is John P. Neumann</h1>
-<p>I work at InContext Solutions as the Lead Technical Artist.</p>
-<p>I'm a former Marine and Disabled Veteran.</p>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>My GitHub website</h1>
+        <p>I wish I was cool enough to have a tagline...</p>
+
+
+        <p class="view"><a href="https://github.com/johnpneumann">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h1>
+<a id="my-name-is-john-p-neumann" class="anchor" href="#my-name-is-john-p-neumann" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My name is John P. Neumann</h1>
+
+<p>I'm the Senior Technical Artist at InContextSolutions.</p>
+
+<ul>
+<li>I like Python. </li>
+<li>My kids still think I'm cool.</li>
+<li>I'm a Marine Corps Veteran. </li>
+<li>I developed a peanut allergy at 25.</li>
+<li>
+<p>My daughter gets to write the last thing in this list.</p>
+
+<blockquote>
+<p>i like to draw</p>
+</blockquote>
+</li>
+</ul>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
