--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <h1>
 <a id="my-name-is-john-p-neumann" class="anchor" href="#my-name-is-john-p-neumann" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My name is John P. Neumann</h1>
 
-<p>I'm the Senior Technical Artist at InContextSolutions.</p>
+<p>I'm a Software Engineer who does things.</p>
 
 <ul>
-<li>I like Python. </li>
+<li>I like Python.</li>
 <li>My kids still think I'm cool.</li>
-<li>I'm a Marine Corps Veteran. </li>
+<li>I'm a Marine Corps Veteran.</li>
 <li>I developed a peanut allergy at 25.</li>
 <li>
 <p>My daughter gets to write the last thing in this list.</p>
@@ -47,6 +47,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
